# TWStockAnalysis-RealtimeJob

./: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
docs/: data_sources.md
scripts/: backfill_market_type.py
src/realtime_job/: db.py  main.py  sources.py
tests/unit/: test_db.py  test_sources.py
